--- a/index.html
+++ b/index.html
@@ -4,43 +4,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>20 DE OVEMBRO</title>
+    <title>20 DE NOVEMBRO</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <header>20 DE NOVEMBRO </header>
+    <header>20 DE NOVEMBRO - DIA DA CONSIÊNCIA NEGRA</header>
     <!-- cabeçalho; título 1; parágrafo 1; vídeo 1;-->
     <section>
         <div class="chamada-texto">
-            <h1>historiá de zumbi dos palmares e a importancia dessa data no Brasil</h1>
-            <p>PARAGRAFO 1</p>
-            <p>PARAGRAFO 2</p>
+            <h1>A história de Zumbi dos Palmares e a importância dessa data no Brasil</h1>
+            <p>O Dia da Consciência Negra, celebrado em 20 de novembro, é um importante marco para a reflexão sobre a luta contra o racismo e a valorização da cultura afro-brasileira. </p>
+            <p>Oficializado como feriado nacional em 2023, a data homenageia Zumbi dos Palmares, figura histórica na resistência contra a escravidão.</p>
         </div>
         <div class="chamada-video">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/PIb6AZdTr-A?si=1YBb_Patxnq4Tae9&quot;
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
-            </iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/v5a67FiRAwM?si=be6p6dYgjQwWDOME&quot; title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
-    </section>
-
-    <section>
-        <h2>TEXTO 2</h2>
-
-        <div class="categoria-videos">
-            <a VIDEO 1
-            </a>
-
-            <a VIDEO 2
-            </a>
-
-            <a VIDEO 3
-            </a>
-
-        </div>
-
     </section>
 </body>
 
